--- a/milton-ui/src/PostList.css
+++ b/milton-ui/src/PostList.css
@@ -2,12 +2,40 @@
     font-size: 100%;
     font-family: inherit;
     border: 0;
-    padding: 0;
     text-align: inherit;
     background-color: inherit;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+.postButton:hover > span.unselectedName:after {
+    content: " ⮜";
+}
+
+.postList {
+    height: 100%;
+    overflow-x: auto;
 }
 
 .postListUl {
     list-style-type: none;
-    padding-left: 0;
+    padding: 0;
+}
+
+.postListItem {
+    min-height: 4em;
+    display: grid;
+}
+
+.postListItem:not(:last-child) {
+    border-bottom: 2px solid lightgray;
+}
+
+.postListHeader {
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
 }
