Call npm build from gradle; favicon

--- a/milton-ui/src/PostList.css
+++ b/milton-ui/src/PostList.css
@@ -9,8 +9,8 @@
     padding: 0;
 }
 
-.postButton:hover > span.unselectedName:after {
-    content: " ⮜";
+.postButton:hover > span.unselectedName:after, .postButton > span.selectedName:after {
+    content: " ←";
 }
 
 .postList {
