--- a/milton-ui/src/AlertMessages.css
+++ b/milton-ui/src/AlertMessages.css
@@ -1,7 +1,7 @@
 div.alerts {
     position: fixed;
     top: 10px;
-    left: 25%;
-    width: 50%;
+    left: 0;
+    width: 100%;
     z-index: 10;
 }
